// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Shared Components|Table Default 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
    className="sc-fjdhpX jDWzMA"
  >
    <table
      className="sc-jzJRlG dINcDo"
    >
      <tbody
        className="sc-kAzzGY jHprQs"
      >
        <tr
          className="sc-chPdSV diRsub"
        >
          <td
            className="sc-kgoBCf deOErS"
          >
            US
          </td>
          <td
            className="sc-kgoBCf deOErS"
          >
            Washington, D.C.
          </td>
          <td
            className="sc-kgoBCf deOErS"
          >
            USA
          </td>
        </tr>
        <tr
          className="sc-chPdSV diRsub"
        >
          <td
            className="sc-kgoBCf deOErS"
          >
            PL
          </td>
          <td
            className="sc-kgoBCf deOErS"
          >
            Warsaw
          </td>
          <td
            className="sc-kgoBCf deOErS"
          >
            Poland
          </td>
        </tr>
        <tr
          className="sc-chPdSV diRsub"
        >
          <td
            className="sc-kgoBCf deOErS"
          >
            DE
          </td>
          <td
            className="sc-kgoBCf deOErS"
          >
            Berlin
          </td>
          <td
            className="sc-kgoBCf deOErS"
          >
            Germany
          </td>
        </tr>
        <tr
          className="sc-chPdSV diRsub"
        >
          <td
            className="sc-kgoBCf deOErS"
          >
            FR
          </td>
          <td
            className="sc-kgoBCf deOErS"
          >
            Paris
          </td>
          <td
            className="sc-kgoBCf deOErS"
          >
            France
          </td>
        </tr>
        <tr
          className="sc-chPdSV diRsub"
        >
          <td
            className="sc-kgoBCf deOErS"
          >
            ES
          </td>
          <td
            className="sc-kgoBCf deOErS"
          >
            Madird
          </td>
          <td
            className="sc-kgoBCf deOErS"
          >
            Spain
          </td>
        </tr>
        <tr
          className="sc-chPdSV diRsub"
        >
          <td
            className="sc-kgoBCf deOErS"
          >
            —
          </td>
          <td
            className="sc-kgoBCf deOErS"
          >
            Sed eu dictum orci. In hac habitasse platea dictumst.
  Donec vestibulum scelerisque est sit amet mattis. Duis ac magna
  elementum felis semper dapibus nec id ligula. Nullam vehicula urna
  ac arcu scelerisque tincidunt. Vestibulum ante ipsum primis in
  faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque
  aliquet, nulla et tincidunt porttitor, eros risus pellentesque lorem,
  in elementum dui magna ac sem. Nulla facilisi. In hac habitasse platea
  dictumst. Sed eu dictum orci. In hac habitasse platea dictumst.

          </td>
          <td
            className="sc-kgoBCf deOErS"
          >
            Sed eu dictum orci. In hac habitasse platea dictumst.
  Donec vestibulum scelerisque est sit amet mattis. Duis ac magna
  elementum felis semper dapibus nec id ligula. Nullam vehicula urna
  ac arcu scelerisque tincidunt. Vestibulum ante ipsum primis in
  faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque
  aliquet, nulla et tincidunt porttitor, eros risus pellentesque lorem,
  in elementum dui magna ac sem. Nulla facilisi. In hac habitasse platea
  dictumst. Sed eu dictum orci. In hac habitasse platea dictumst.

          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Storyshots Shared Components|Table with header 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
    className="sc-fjdhpX jDWzMA"
  >
    <table
      className="sc-jzJRlG dINcDo"
    >
      <thead
        className="sc-cSHVUG CAuLq"
      >
        <tr
          className="sc-chPdSV diRsub"
        >
          <th
            className="sc-kGXeez fpUCkA"
          >
            Code
          </th>
          <th
            className="sc-kGXeez fpUCkA"
          >
            Capital
          </th>
          <th
            className="sc-kGXeez fpUCkA"
          >
            Country
          </th>
        </tr>
      </thead>
      <tbody
        className="sc-kAzzGY jHprQs"
      >
        <tr
          className="sc-chPdSV diRsub"
        >
          <td
            className="sc-kgoBCf deOErS"
          >
            US
          </td>
          <td
            className="sc-kgoBCf deOErS"
          >
            Washington, D.C.
          </td>
          <td
            className="sc-kgoBCf deOErS"
          >
            USA
          </td>
        </tr>
        <tr
          className="sc-chPdSV diRsub"
        >
          <td
            className="sc-kgoBCf deOErS"
          >
            PL
          </td>
          <td
            className="sc-kgoBCf deOErS"
          >
            Warsaw
          </td>
          <td
            className="sc-kgoBCf deOErS"
          >
            Poland
          </td>
        </tr>
        <tr
          className="sc-chPdSV diRsub"
        >
          <td
            className="sc-kgoBCf deOErS"
          >
            DE
          </td>
          <td
            className="sc-kgoBCf deOErS"
          >
            Berlin
          </td>
          <td
            className="sc-kgoBCf deOErS"
          >
            Germany
          </td>
        </tr>
        <tr
          className="sc-chPdSV diRsub"
        >
          <td
            className="sc-kgoBCf deOErS"
          >
            FR
          </td>
          <td
            className="sc-kgoBCf deOErS"
          >
            Paris
          </td>
          <td
            className="sc-kgoBCf deOErS"
          >
            France
          </td>
        </tr>
        <tr
          className="sc-chPdSV diRsub"
        >
          <td
            className="sc-kgoBCf deOErS"
          >
            ES
          </td>
          <td
            className="sc-kgoBCf deOErS"
          >
            Madird
          </td>
          <td
            className="sc-kgoBCf deOErS"
          >
            Spain
          </td>
        </tr>
        <tr
          className="sc-chPdSV diRsub"
        >
          <td
            className="sc-kgoBCf deOErS"
          >
            —
          </td>
          <td
            className="sc-kgoBCf deOErS"
          >
            Sed eu dictum orci. In hac habitasse platea dictumst.
  Donec vestibulum scelerisque est sit amet mattis. Duis ac magna
  elementum felis semper dapibus nec id ligula. Nullam vehicula urna
  ac arcu scelerisque tincidunt. Vestibulum ante ipsum primis in
  faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque
  aliquet, nulla et tincidunt porttitor, eros risus pellentesque lorem,
  in elementum dui magna ac sem. Nulla facilisi. In hac habitasse platea
  dictumst. Sed eu dictum orci. In hac habitasse platea dictumst.

          </td>
          <td
            className="sc-kgoBCf deOErS"
          >
            Sed eu dictum orci. In hac habitasse platea dictumst.
  Donec vestibulum scelerisque est sit amet mattis. Duis ac magna
  elementum felis semper dapibus nec id ligula. Nullam vehicula urna
  ac arcu scelerisque tincidunt. Vestibulum ante ipsum primis in
  faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque
  aliquet, nulla et tincidunt porttitor, eros risus pellentesque lorem,
  in elementum dui magna ac sem. Nulla facilisi. In hac habitasse platea
  dictumst. Sed eu dictum orci. In hac habitasse platea dictumst.

          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Storyshots Shared Components|Table with numbered rows 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
    className="sc-fjdhpX jDWzMA"
  >
    <table
      className="sc-jzJRlG dINcDo"
    >
      <thead
        className="sc-cSHVUG CAuLq"
      >
        <tr
          className="sc-chPdSV diRsub"
        >
          <th
            className="sc-kGXeez fpUCkA"
          >
            #
          </th>
          <th
            className="sc-kGXeez fpUCkA"
          >
            Code
          </th>
          <th
            className="sc-kGXeez fpUCkA"
          >
            Capital
          </th>
          <th
            className="sc-kGXeez fpUCkA"
          >
            Country
          </th>
        </tr>
      </thead>
      <tbody
        className="sc-kAzzGY jHprQs"
      >
        <tr
          className="sc-chPdSV diRsub"
        >
          <td
            className="sc-kpOJdX gwHCnA"
          >
            1
          </td>
          <td
            className="sc-kgoBCf deOErS"
          >
            US
          </td>
          <td
            className="sc-kgoBCf deOErS"
          >
            Washington, D.C.
          </td>
          <td
            className="sc-kgoBCf deOErS"
          >
            USA
          </td>
        </tr>
        <tr
          className="sc-chPdSV diRsub"
        >
          <td
            className="sc-kpOJdX gwHCnA"
          >
            2
          </td>
          <td
            className="sc-kgoBCf deOErS"
          >
            PL
          </td>
          <td
            className="sc-kgoBCf deOErS"
          >
            Warsaw
          </td>
          <td
            className="sc-kgoBCf deOErS"
          >
            Poland
          </td>
        </tr>
        <tr
          className="sc-chPdSV diRsub"
        >
          <td
            className="sc-kpOJdX gwHCnA"
          >
            3
          </td>
          <td
            className="sc-kgoBCf deOErS"
          >
            DE
          </td>
          <td
            className="sc-kgoBCf deOErS"
          >
            Berlin
          </td>
          <td
            className="sc-kgoBCf deOErS"
          >
            Germany
          </td>
        </tr>
        <tr
          className="sc-chPdSV diRsub"
        >
          <td
            className="sc-kpOJdX gwHCnA"
          >
            4
          </td>
          <td
            className="sc-kgoBCf deOErS"
          >
            FR
          </td>
          <td
            className="sc-kgoBCf deOErS"
          >
            Paris
          </td>
          <td
            className="sc-kgoBCf deOErS"
          >
            France
          </td>
        </tr>
        <tr
          className="sc-chPdSV diRsub"
        >
          <td
            className="sc-kpOJdX gwHCnA"
          >
            5
          </td>
          <td
            className="sc-kgoBCf deOErS"
          >
            ES
          </td>
          <td
            className="sc-kgoBCf deOErS"
          >
            Madird
          </td>
          <td
            className="sc-kgoBCf deOErS"
          >
            Spain
          </td>
        </tr>
        <tr
          className="sc-chPdSV diRsub"
        >
          <td
            className="sc-kpOJdX gwHCnA"
          >
            6
          </td>
          <td
            className="sc-kgoBCf deOErS"
          >
            —
          </td>
          <td
            className="sc-kgoBCf deOErS"
          >
            Sed eu dictum orci. In hac habitasse platea dictumst.
  Donec vestibulum scelerisque est sit amet mattis. Duis ac magna
  elementum felis semper dapibus nec id ligula. Nullam vehicula urna
  ac arcu scelerisque tincidunt. Vestibulum ante ipsum primis in
  faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque
  aliquet, nulla et tincidunt porttitor, eros risus pellentesque lorem,
  in elementum dui magna ac sem. Nulla facilisi. In hac habitasse platea
  dictumst. Sed eu dictum orci. In hac habitasse platea dictumst.

          </td>
          <td
            className="sc-kgoBCf deOErS"
          >
            Sed eu dictum orci. In hac habitasse platea dictumst.
  Donec vestibulum scelerisque est sit amet mattis. Duis ac magna
  elementum felis semper dapibus nec id ligula. Nullam vehicula urna
  ac arcu scelerisque tincidunt. Vestibulum ante ipsum primis in
  faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque
  aliquet, nulla et tincidunt porttitor, eros risus pellentesque lorem,
  in elementum dui magna ac sem. Nulla facilisi. In hac habitasse platea
  dictumst. Sed eu dictum orci. In hac habitasse platea dictumst.

          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
